--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,7 +6,7 @@
 
     <string name="settings_activity">Settings</string>
     <string name="application_not_installed">Application not installed. [%s]</string>
-    <string name="yp_loading">Loading...</string>
+    <string name="yp_loading">Loading…</string>
     <string name="yp_cache">(Cache)</string>
     <string name="yp_connect_failed">%s connect failed:</string>
     <string name="yp_reload">Reload YellowPages..</string>
@@ -91,7 +91,7 @@
     <string name="sort_age_desc">Duration+</string>
     <string name="speed_test">Uptest</string>
     <string name="settings">Settings</string>
-    <string name="peca_service_running">Service starting %d</string>
+    <string name="peercast_has_started">PeerCast has started on %d</string>
     <string name="reload">Reload</string>
 
     <string name="yp4g_statistics">Statistics</string>
@@ -102,7 +102,7 @@
 
     <string name="ch_listeners_fmt" translatable="false">%1$d/%2$s</string>
     <string name="pref_header_about" translatable="false">About</string>
-    <string name="viewer_goto_google_play">Go to Google play...</string>
+    <string name="viewer_goto_google_play">Go to Google play…</string>
     <string name="viewer_installed">PecaViewer installed.</string>
     <string name="viewer_not_installed">Not installed</string>
     <string name="debug_mode">Debug mode</string>
@@ -122,6 +122,8 @@
     <string name="notification_led" translatable="false">LED</string>
     <string name="notification_wakeup">Wakeup</string>
 -->
+
+    <string name="closed_port">Port is not open</string>
 
 
     <string name="enabled">Enabled</string>
